<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".orderDetailActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/food6" />

            <TextView
                android:id="@+id/detailFoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/orderBackground"
                android:gravity="center"
                android:padding="3dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/negative"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/negative" />

                <TextView
                    android:id="@+id/detailQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/Plus"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/plus" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <TextView
                    android:id="@+id/detailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DescriptionFood"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="9dp"
                    />
                <EditText
                    android:id="@+id/detailEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_edittext"
                    android:gravity="center"
                    android:hint="Name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/detailPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edittext"
                    android:gravity="center"
                    android:hint="@string/_03098393995"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    tools:ignore="TextFields" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Price"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/Red"
                        />

                    <TextView
                        android:id="@+id/priceLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_100"
                        android:textColor="@color/Red"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_btn"
                    android:text="@string/order_now"
                    android:id="@+id/insertOrder"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>